--- a/styles/architect.css
+++ b/styles/architect.css
@@ -62,6 +62,36 @@ nav li a{
     width:100%;
     margin-top:20px;
 }
+/* team section */
+
+main{
+    width:1440px;
+    margin: 0 auto;
+}
+.teams-container{
+    display: flex;
+    align-items: center;
+}
+.teams-img-container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap:1.5rem;
+}
+.teams-content{
+    padding-left:70px;
+    padding-right: 70px;
+}
+.teams-title{
+    font-size:2.8rem;
+}
+.teams-title .quick-list{
+    color:#727272;
+    font-weight: 500;
+}
+.text-features{
+    color:#ff900e;
+    font-weight: 700;
+}
 
 /* responsive styles */
 @media screen and (max-width:576px){
