started shared css

--- a/styles/architect.css
+++ b/styles/architect.css
@@ -8,6 +8,11 @@ body {
 .text-light-gray{
     color:#727272;
 }
+.section-title{
+    font-size: 3rem;
+    font-weight: 700;
+    color:#131313;
+}
 .btn-primary{
     border-radius: 8px;
     background-color: #ff900e;
@@ -27,11 +32,7 @@ nav{
     justify-content: space-between;
     align-items: center;
 }
-.nav-title{
-    font-size: 3rem;
-    font-weight: 700;
-    color:#131313;
-}
+
 nav > ul{
     display: flex;
 }
