--- a/styles/architect.css
+++ b/styles/architect.css
@@ -174,6 +174,15 @@ margin: 80px auto;
 .hide{
     display: none;
 }
+/* footer styles */
+.footer-contain{
+    background-color: rgba(255, 144, 14, .10);
+    max-width: 1140px;
+    padding:50px;
+    text-align: center;
+    margin:0 auto;
+    
+}
 
 
 /* responsive styles */
@@ -225,6 +234,10 @@ margin: 80px auto;
     }
     .sponsor-img-container{
         flex-direction: column;
+    }
+    .footer-contain  {
+        padding: 5px;
+        width:300px;
     }
   
    
